force-app/main/default/objects/Membership_Service_Rendered__c/fields/Service_Count__c.field-meta.xml
<CustomField>
    <fullName>Service_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>