force-app/main/default/objects/Membership_Service_Rendered__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <label>Service Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GainsWave</fullName>
            </value>
            <value>
                <fullName>EmScultp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>