force-app/main/default/objects/Membership_Service_Rendered__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Service_Count__c</columns>
    <columns>Service_Date__c</columns>
    <columns>Service_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>